# json-cpp-container

./: CMakeLists.txt  Dockerfile
config/: request.json  response.json
include/: request_message.hpp  response_message.hpp
src/: main.cc  request_message.cc  response_message.cc
templates/: README.md
tests/: message_test.cc
